create db, start create cli commands

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DATABASE_URL="postgresql+psycopg2://"
+DATABASE_URL="postgresql+psycopg2://postgres:@localhost:5432/cassette_rev"
 JWT_SECRET_KEY="secret"
