cli controllers create, seed, drop working! :)

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DATABASE_URL="postgresql+psycopg2://postgres:@localhost:5432/cassette_rev"
+DATABASE_URL="postgresql+psycopg2://cassette_rev_dev:123456@localhost:5432/cassette_rev"
 JWT_SECRET_KEY="secret"
