--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ Flask-SQLAlchemy==3.0.5
 greenlet==2.0.2
 itsdangerous==2.1.2
 Jinja2==3.1.2
+jsonify==0.5
 MarkupSafe==2.1.3
 marshmallow==3.19.0
 marshmallow-sqlalchemy==0.29.0
